--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
             </div>
 
             <div class="alert alert-info" style="margin-top: 20px;">
-                <strong>ℹ️ Note:</strong> Total Volume (m³) can be calculated from Length, Width, and Height, or entered manually. Project Duration is automatically calculated based on Total Volume, Daily Operating Hours **for Printer** (assuming 0.32 m³ material requires 1 hour for printing) AND **for Mixing** (assuming a 0.081 m³ batch requires 1 hour to mix).
+                <strong>ℹ️ Note:</strong> Total Volume (m³) can be calculated from Length, Width, and Height, or entered manually. Project Duration is automatically calculated based on Total Volume, Daily Operating Hours **for Printer** (assuming 0.32 m³ material requires 1 hour for printing) AND **for Mixing** (assuming a 0.081 m³ /batch).
             </div>
         </div>
 
