--- a/index.html
+++ b/index.html
@@ -1812,7 +1812,7 @@
                 ]
             },
             {
-                name: "GearBuild",
+                name: "GeoBuild",
                 options: [
                     { label: "Hourly Rental", rate: 64057, unit: "hour" },
                     { label: "8-Hour Rental (per day)", rate: 1537367 / 3, unit: "8-hour" },
